--- a/mandlebrot.ipynb
+++ b/mandlebrot.ipynb
@@ -36,7 +36,9 @@
     "import time\n",
     "from math import sqrt\n",
     "from PIL import Image, ImageDraw\n",
-    "import datetime as dt"
+    "import datetime as dt\n",
+    "\n",
+    "# test"
    ]
   },
   {
