--- a/time_complexty.ipynb
+++ b/time_complexty.ipynb
@@ -1,11 +1,11 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Examples of differences in target time complexities"
+   ]
   },
   {
    "cell_type": "code",
